# axum-avoid-src-deps

./: Cargo.toml  makefile
.cargo/: config.toml
app/: Cargo.toml  main.rs
interfaces/: Cargo.toml  lib.rs
tenants/: Cargo.toml  lib.rs
users/: Cargo.toml  lib.rs
