[workspace]
resolver = "2"
members = [
    "app",
    "users",
    "tenants",
    "interfaces",
]

default-members = ["app"]

[workspace.dependencies]
# Modules
# shared = { path = "../../shared" }

# General
serde       = { version = "1.0.192", features = ["derive"] }
serde_json  = { version = "1.0.108", features = ["preserve_order"] }
uuid = { version = "1.5.0", features = ["v4"] }
nject = "0.3"

# Axum
axum = "0.6.20"
hyper = "1.0.1"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"

# Database
diesel = { version = "2.1.3", default-features = false, features = ["uuid"] }
diesel-async = { version = "0.4.1", features = ["postgres"] }
